--- a/src/css/scrollbar.css
+++ b/src/css/scrollbar.css
@@ -4,15 +4,25 @@
 	width: 12px;
 }
 
-body::-webkit-scrollbar {
-	width: 20px;
-}
-
 *::-webkit-scrollbar-track {
 	background: #f1e9e9;
 }
 
 *::-webkit-scrollbar-thumb {
+	background-color: #582965;
+	border-radius: 10px;
+	border: 3px solid #ffffff;
+}
+
+body::-webkit-scrollbar {
+	width: 20px;
+}
+
+body::-webkit-scrollbar-track {
+	background: #f1e9e9;
+}
+
+body::-webkit-scrollbar-thumb {
 	background-color: #582965;
 	border-radius: 10px;
 	border: 3px solid #ffffff;
